# project-2-ai-system-rocking-rolling

./: .gitignore  AGENTS.md  BENCHMARKS.md  Dockerfile  PROPOSAL.md  PROPOSAL_MICHAEL.md  README.md  UNIT_TEST_RESULTS.md  draft1.md  justfile  paper.requirements.md  pyproject.toml
.claude/: .fuse_hidden000363270000002d  settings.json
.claude/skills/code-review/: SKILL.md
.zed/: settings.json
latex_paper/: main.tex  references.bib
latex_paper/sections/: abstract.tex  architecture.tex  conclusion.tex  contributions.tex  delta.tex  evaluation.tex  introduction.tex  limitations.tex  modules.tex  results.tex
modules/api/: pyproject.toml
modules/module1/: CHANGELOG.md  README.md  main.py  pyproject.toml  test_main.py
modules/module1/test_files/: cindy_lauper_low.json  high_level_beethoven_symphony_6.json  low_level_Beethoven_2.json  low_level_Beethoven_35.json  low_level_beethoven_symphony_6.json  pink_floyd_low.json  sample_highlevel.json
modules/module2/: CHANGELOG.md  USAGE.md  pyproject.toml  test_benchmark.py
modules/module3/: CHANGELOG.md  FAST_USAGE.md  USAGE.md  pyproject.toml
modules/module3/src/module3/: __init__.py  constraints.py  data_models.py  essentia_client.py  explainer.py  main.py  playlist_assembler.py  proxy_pool.py  user_model.py
modules/module3/src/module3/tests/: test_assembler.py  test_constraints.py  test_essentia.py  test_explainer.py  test_proxy_pool.py  test_user_model.py
modules/module3/src/module3/tests/fixtures/: mock_essentia.py
modules/module4/: CHANGELOG.md  USAGE.md  pyproject.toml
modules/module4/src/module4/: __init__.py  data_models.py  feature_engineering.py  main.py  mood_classifier.py  training_data.py
modules/module4/src/module4/tests/: test_feature_engineering.py  test_mood_classifier.py  test_training_data.py
modules/module5/: pyproject.toml
modules/module5/src/module5/: __init__.py  orchestrator.py
modules/module5/src/module5/tests/: test_orchestrator.py
papers/: citations.txt
plans/: module1.md  module2.md
presentation/: SPEAKER_NOTES.md  index.html  package.json  pnpm-lock.yaml
presentation/src/: Presentation.tsx  index.css  main.tsx  p5helpers.ts  presentation.css  theme.ts
presentation/src/data/: curated_tracks.json  genreArtists.ts  genre_artists.json  playlist.json
presentation/src/sketches/: architecture.ts  beamSearch.ts  compatibility.ts  demoBeamSearch.ts  energyArc.ts  frontierWidening.ts  moodScatter.ts  radar.ts  waveform.ts
presentation/src/slides/: Architecture.tsx  BeamSearch.tsx  Compatibility.tsx  Constraints.tsx  DemoArtists.tsx  DemoCover.tsx  DemoGenerating.tsx  DemoGenres.tsx  DemoMoodJourney.tsx  DemoPlaylist.tsx  DemoPreferences.tsx  DemoSuggestions.tsx  DemoTracks.tsx  FrontierWidening.tsx  Future.tsx  Infrastructure.tsx  Mood.tsx  Preferences.tsx  ProbLog.tsx  Problem.tsx  Radar.tsx  ThankYou.tsx  Title.tsx  WebUI.tsx  demo-types.ts  types.ts
rubrics/: checkpoint-1.md  checkpoint-2.md  checkpoint-3.md  checkpoint-4.md  checkpoint-5.md  code-elegance.md  full-project.md
scripts/: generate_curated_tracks.py  genre_top_artists.json
scripts/tests/: test_generate_curated_tracks.py
web/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.tsx  types.ts
web/src/components/: ComponentBar.tsx  FeatureModal.tsx  FeatureProgressionChart.tsx  MoodPicker.tsx  PlaylistForm.tsx  PlaylistResults.tsx  ResultsPanel.tsx  SongPicker.tsx  TabNavigation.tsx  TransitionBar.tsx  index.ts
web/src/hooks/: index.ts  useCompare.ts  (+2 more)
(+37 files in other folders)
