[project]
name = "wave-guide"
version = "0.1.0"
description = "Your personal music journey."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "problog>=2.2.9",
    "pysdd>=1.0.6",
    "requests>=2.31.0",
    "flask>=3.0.0",
]

# Optional: used to generate presentation slides (build_ppt.py)
[project.optional-dependencies]
ppt = [
    "python-pptx>=1.0.2",
    "matplotlib>=3.10.8",
]

[tool.uv.workspace]
members = [
    "modules/*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "rust-just>=1.46.0",
    "ty>=0.0.14",
]
