[project]
name = "wave-guide"
version = "0.1.0"
description = "Your personal music journey."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "problog>=2.2.9",
    "pysdd>=1.0.6",
    "requests>=2.31.0",
    "flask>=3.0.0",
    "module1",
    "module2",
    "module3",
    "module4",
]

[tool.uv.sources]
module1 = { workspace = true }
module2 = { workspace = true }
module3 = { workspace = true }
module4 = { workspace = true }

[tool.uv.workspace]
members = [
    "modules/*",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "rust-just>=1.46.0",
    "ty>=0.0.14",
]
