[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "module4"
version = "0.1.0"
description = "Mood classification and feature mapping for Wave Guide"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "scikit-learn>=1.6.0",
    "tqdm>=4.66.0",
    "module1",
]

[tool.uv.sources]
module1 = { workspace = true }
