[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "module5"
version = "0.1.0"
description = "Playlist orchestration and system integration for Wave Guide"
requires-python = ">=3.13"
dependencies = [
    "module1",
    "module2",
    "module3",
    "module4",
]

[tool.uv.sources]
module1 = { workspace = true }
module2 = { workspace = true }
module3 = { workspace = true }
module4 = { workspace = true }
